@@ -1,3 +1,8 @@
+2007-05-15  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* gas/arm/backslash-at.d: New.
+	* gas/arm/backslash-at.s: New.
+
 2007-05-15  Vincent Riviere  <vincent.riviere@freesbee.fr>
 	    Nick Clifton  <nickc@redhat.com>
 
