@@ -1,3 +1,7 @@
+2007-05-15  Mark Shinwell  <shinwell@codesourcery.com>
+
+	* app.c (do_scrub_chars): Don't damage \@ pseudo-variables.
+
 2007-05-15  Vincent Riviere  <vincent.riviere@freesbee.fr>	
 
 	PR gas/3041
